# hsa-kernel-samples

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindHSA.cmake
docker/: Dockerfile  build  run
vector_add/: CMakeLists.txt  vector_add_hsa.cpp
